@@ -1,0 +1,39 @@
+Type=OleDll
+Reference=*\G{00020430-0000-0000-C000-000000000046}#2.0#0#C:\WINNT\system32\stdole2.tlb#OLE Automation
+Class=WinMergeScript; WinMergeScript.cls
+Startup="(None)"
+HelpFile=""
+Title="IgnoreLeadingLineNumbers"
+ExeName32="IgnoreLeadingLineNumbers.dll"
+Command32=""
+Name="IgnoreLeadingLineNumbers"
+HelpContextID="0"
+CompatibleMode="0"
+CompatibleEXE32="IgnoreLeadingLineNumbers.dll"
+MajorVer=1
+MinorVer=0
+RevisionVer=0
+AutoIncrementVer=0
+ServerSupportFiles=0
+VersionFileDescription="WinMerge plugin to ignore leading line numbers in text files (e.g. NC and BASIC files)."
+VersionLegalCopyright="Tim Gerundt"
+VersionProductName="IgnoreLeadingLineNumbers"
+CompilationType=0
+OptimizationType=0
+FavorPentiumPro(tm)=0
+CodeViewDebugInfo=0
+NoAliasing=0
+BoundsCheck=0
+OverflowCheck=0
+FlPointCheck=0
+FDIVCheck=0
+UnroundedFP=0
+StartMode=1
+Unattended=0
+Retained=0
+ThreadPerObject=0
+MaxNumberOfThreads=1
+DebugStartupOption=0
+
+[MS Transaction Server]
+AutoRefresh=1
