@@ -1,3 +1,7 @@
+2007-01-14 Tim
+ PATCH: [ 1633632 ] Plugin to ignore leading line numbers in text files
+  Manual: Plugins.xml
+
 2007-01-04 Tim
  PATCH: [ 1626464 ] Manual: Highlight examples with CSS
   Manual/css: all.css help.css print.css
